[workspace]
resolver = "2"
members = [
  'pinhole-protocol',
  'pinhole-client',
  'pinhole-framework',

  'todomvc-example'
]

[workspace.dependencies]
# Workspace crates
pinhole-protocol = { path = "pinhole-protocol" }
pinhole = { path = "pinhole-framework" }

# Async runtime
tokio = { version = "1.48", features = ["io-util", "net", "macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"

# TLS
tokio-native-tls = "0.3"
native-tls = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"

# Logging
log = { version = "0.4", features = ["kv_unstable"] }
kv-log-macro = "1.0"
femme = "2.0"
env_logger = "0.10"

# GUI
iced = { version = "0.13", features = ["tokio", "advanced"] }

# Utilities
futures = "0.3"
directories = "5.0"
rustc-hash = "2.1"
maplit = "*"

# Dev dependencies
tempfile = "3.8"
