[package]
name = "pinhole-client"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinhole-protocol = { path = "../pinhole-protocol" }
async-std = { version = "1.7", features = ['unstable'] }
iced = { version = "0.8", features = ['async-std'] }
futures = "*"
log = { version = "0.4", features = ['kv_unstable'] }
kv-log-macro = "1.0"
femme = "2.0"
