[package]
name = "pinhole-client"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinhole-protocol = { path = "../pinhole-protocol" }
async-std = { version = "1.7", features = ['unstable'] }
iced = { version = "0.13", features = ['async-std', 'advanced'] }
futures = "0.3"
log = { version = "0.4", features = ['kv_unstable'] }
kv-log-macro = "1.0"
femme = "2.0"
env_logger = "0.10"
rustc-hash = "2.1"
serde_json = "1.0"
directories = "5.0"

[dev-dependencies]
tempfile = "3.8"
