[package]
name = "pinhole-client"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinhole-protocol.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
iced.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
directories.workspace = true
tokio-native-tls.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
