[package]
name = "pinhole"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinhole-protocol.workspace = true
async-std = { workspace = true, features = ["attributes"] }
log.workspace = true
kv-log-macro.workspace = true
femme.workspace = true
async-trait.workspace = true
async-native-tls.workspace = true

[dev-dependencies]
serde_cbor.workspace = true
tempfile.workspace = true
