[package]
name = "pinhole-protocol"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
tokio.workspace = true
serde_cbor.workspace = true
tokio-native-tls.workspace = true
native-tls.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
