[package]
name = "pinhole-todomvc-example"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinhole.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
maplit.workspace = true
